css/style.css
/* ... */
	input[type=number] {
		border: 1px solid #ced4da;
	}

	/* form calendar icon styling */
.errorMsg {
	color: red !important;
}
.formErrors {
	border: solid 1px red !important;
	-webkit-box-shadow: 0 0 5px 1px red;
	box-shadow: 0 0 5px 1px red;
	
}

/*
.form_datetime {
    border-radius: .25rem;
    border: solid 1px #34AFA9;
    padding: 6px 12px;
	background-color: white;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0; 
}
*/
/*
.fa-calendar:before {
    content: "\f271";
    margin-left: 2.5rem;

	padding-top: .41rem;
    padding-right: .65rem;
    padding-left: .81rem;

    padding-bottom: .59rem;
    font-size: 1.25rem;
    color: #34AFA9;
    background-color: #f2f2f2;
    border-left: 1px solid #ced4da;
	border: solid 1px;
	border-sizing: border-box;

}
*/

#newTaskPage .fa.fa-calendar,
#editTaskPage .fa.fa-calendar
{
	padding-top: .2rem;
}


.input-group>.input-group-append>.input-group-text {
	border: solid 1px #34AFA9 !important;

}

#newTaskPage .fa-calendar:before,
#editTaskPage .fa-calendar:before
{
    content: "\f271";
	margin-left: 0;
/*	margin-right: .3rem;*/
	padding-top: .41rem;
    padding-right: .75rem;
    padding-left: .75rem;
    padding-bottom: .55rem;
    font-size: 1.25rem;
    color: #34AFA9;
/*	border: solid 1px #34AFA9;*/
/*	border-radius: 0 .25rem .25rem 0;*/
/*	border-left: 0;*/
}
/*
#newTaskPage .fa.fa-clock-o {
	padding-top: .5rem
}
*/

/*
#newTaskPage .fa-clock-o:before {
    content: "\f017";
	margin-left: 0;
	padding-top: .41rem;
    padding-right: .65rem;
    padding-left: .81rem;
    padding-bottom: .55rem;
    font-size: 1.25rem;
    color: #34AFA9;
	border: solid 1px #34AFA9;
	border-radius: 0 .25rem .25rem 0;
	border-left: 0;
}
*/


.dueDateDelete.fa-remove:before, .dueDateDelete.fa-close:before, .dueDateDelete.fa-times:before {
    content: "\f00d";
    font-size: 1.25rem;
/*    padding: .4rem;*/
	padding-top: .60rem;
/*    padding-right: .2rem;*/
    padding-left: .75rem;
    padding-bottom: .75rem;
    color: #34AFA9;
/*	margin-left: -.5rem;*/
/*    background-color: #f2f2f2;*/
/*    border: 1px solid #ced4da;*/
	border-left: 1px solid #34AFA9;
/*	border-right: 1px solid #ccd4da;*/
/*
	border-top: none;
	border-bottom: none;
*/
/*	border-radius: 0 .25rem .25rem 0;*/
	
}
/**/

.newTaskPage .dueDateDelete.fa-remove:before, 
.newTaskPage .dueDateDelete.fa-close:before,
.newTaskPage .dueDateDelete.fa-times:before
.newTaskPage .dueTimeDelete.fa-remove:before, 
.newTaskPage .dueTimeDelete.fa-close:before,
.newTaskPage .dueTimeDelete.fa-times:before
{
/*	margin-left: 4.2rem;*/
	border: solid 1px;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
}

/**/

#homePage .fa-trash-o:before,
#homePage .fa-close:before, 
#homePage .fa-times:before {
    font-size: 1.25rem;
	padding-top: .45rem;
/*    padding-right: .65em;*/
    padding-left: .7rem;
    padding-bottom: .55rem;
    color: #34AFA9;
/*	margin-left: 4.2rem;*/
	margin-left: -.5rem;
/*
    background-color: #f2f2f2;
	
	border-left: 1px solid #ccd4da;
	border-top-right-radius: .25rem;
	border-bottom-right-radius: .25rem;
	border: solid 1px;
*/
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	
}

.taskActionRow .fa-trash-o:before, 
.taskActionRow .fa-close:before,
.taskActionRow .fa-times:before {
	border: none;
	background: transparent;
	margin: 0;
	padding-right: 0;

}

.dueDateDelete.fa-remove:before, .dueDateDelete.fa-close:before, .dueDateDelete.fa-times:before
.taskActionRow .fa-trash-o:before {
	padding: 0;
	margin: 0;
	border: 0;
	
}

.notificationComponent .fa-trash-o:before, 
.notificationComponent .fa-close:before,
.notificationComponent .fa-times:before {
	font-size: 1.25rem;
    color: #34AFA9;
	margin-left: -1.5rem;
    background-color: #f2f2f2;
/*	border: 1px solid #ccd4da;*/
	border-radius: .25rem;
/*	margin-left: 0;*/
	
}


/* Solution based on:

https://fabriceleven.com/design/clever-way-to-change-the-drop-down-selector-arrow-icon/

*/
.selectdiv {
  position: relative;
} 

.selectdiv:after {
    content: '\f078';
    font: normal normal normal 1rem/.7 FontAwesome;
    color: #34AFA9;
    right: 55px;
/*    top: 6px;*/
    height: 38px;
    padding: 15px 0px 0px 15px;
    border-left: 1px solid #34AFA9;
    position: absolute;
    pointer-events: none;
}

/* IE11 hide native button (thanks Matt!) */
select::-ms-expand {
display: none;
}

.selectdiv select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  /* Add some styling */
  
  display: block;
  float: right;
/*  padding: 0px 24px;*/
  font-size: 16px;
  line-height: 1.75;
  color: #333;
  background-color: #ffffff;
  background-image: none;
/*  border: 1px solid #34AFA9;*/
  -ms-word-break: normal;
  word-break: normal;
}


	
	#addNewFormNotifications,
	#addEditFormNotifications
	{
		display: inline-block;
		border: 1px solid #34AFA9;
		border-radius: .25rem;
		padding: .4rem;
		margin-bottom: 1rem;
		margin-top: .5rem;
	}

	 .addNotification.fa-plus {
		content: "\f067";
		font-size: 1rem;
	}


/*
	.addDueDateBtn, .clearDueDateBtn {
		float: right;
	}
*/


	/* Make form controls appear in a row rather than as a column */
	
	.input-group .form-control,
	.input-group-addon,
	.input-group-btn {
		-webkit-box-orient: horizontal;
		-webkit-box-direction: normal;
		-ms-flex-direction: row;
		flex-direction: row;
	}
	
	.editTaskPage header h1 {
		margin-top: 2%;
		color: #34AFA9;
		text-align: center;
		font-size: 2rem;
	}
	
	.editTaskPage span.newList,
	.newTaskPage span.newList

	{
		position: relative;
		float: right;
/*		margin-top: -2.2rem;*/
		color: #34AFA9;
/*		left: -3.5rem;*/
	}

/* &&&&&&&& New entry of above &&&&&&&*/
	.editTaskPage span.newList, .newTaskPage span.newList {
		position: relative;
		float: right;
/*		margin-top: -2.35rem;*/
		color: #34AFA9;
		background-color: #f2f2f2;
		border-top-right-radius: 4px;
		border-bottom-right-radius: 5px;
		padding-right: 2px;
		border: solid 1px;
		margin-top: -.36rem;
		margin-left: -.25rem; 
	}
/* ... */

